--- a/master.css
+++ b/master.css
@@ -6,6 +6,8 @@ body{
   font-family: manrope;
   text-align: center;
   background-color: hsl(217, 19%, 24%);
+  display:flex;
+  flex-direction:row;
 }
 .container{
   width:350px;
